# NL2SQL_partial_matching

./: README.md  pyproject.toml  setup.sh
GMN/: configure.py  evaluation.py  graphembeddingnetwork.py  graphmatchingnetwork.py  loss.py  segment.py  train.py  utils.py
GMN/database_spider/gmn_api_data/: test.xlsx  test_aug.xlsx
GMN/dependencies/: torch_scatter-2.0.9-cp37-cp37m-macosx_10_15_x86_64.whl  torch_scatter-2.1.1-cp39-cp39-macosx_10_15_x86_64.whl  torch_sparse-0.6.16-cp37-cp37m-macosx_10_15_x86_64.whl  torch_sparse-0.6.17-cp39-cp39-macosx_10_15_x86_64.whl
GMN/handle_dataset/: dataset_sql_ast.py  spider_dataset.py
GMN/handle_dataset/data_pre_processor/: BaseProcessor.py  ast_processor.py  match_edge_processor.py  positional_encoding_processor.py
GMN/plot_file/: plot.py
GMN/position_encoding/: data.py  gnn_layers.py  positional_encoding_provement.py  utils.py
GMN/utils_file/: draw_new_edge_type.py  predict_checkpoint.py
